@@ -1,4 +1,5 @@
 bin_PROGRAMS =	proj nad2bin geod cs2cs
+EXTRA_PROGRAMS = multistresstest
 
 INCLUDES =	-DPROJ_LIB=\"$(pkgdatadir)\" \
 		-DMUTEX_@MUTEX_SETTING@ @JNI_INCLUDE@
@@ -11,11 +12,13 @@ proj_SOURCES = proj.c gen_cheb.c p_series.c
 cs2cs_SOURCES = cs2cs.c gen_cheb.c p_series.c
 nad2bin_SOURCES = nad2bin.c
 geod_SOURCES = geod.c geod_set.c geod_for.c geod_inv.c geodesic.h
+multistresstest_SOURCES = multistresstest.c
 
 proj_LDADD = libproj.la
 cs2cs_LDADD = libproj.la
 nad2bin_LDADD = libproj.la
 geod_LDADD = libproj.la
+multistresstest_LDADD = libproj.la -lpthread
 
 lib_LTLIBRARIES = libproj.la
 
